<resources>
    <string name="app_name">Manzbuy</string>
    <string name="title_category">Category</string>
    <string name="title_market">Market</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">BookMark</string>
    <string name="title_mypage">MyPage</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
</resources>
